login page responsive

--- a/src/email.html
+++ b/src/email.html
@@ -8,7 +8,25 @@
     <title>Document</title>
 </head>
 <body dir="ltr">
-    
+    <div class="px-96">
+        <div class="p-6 m-4 bg-white rounded-lg shadow-md">
+            <div class="mt-6">
+                <h1 class="text-3xl font-bold text-color3">
+                    Welcome!
+                </h1>
+                <p class="text-gray-600">Sign up or log in to countinue</p>
+            </div>
+            <div>
+                <div class="py-4">
+                    <h4 class="py-2">Delivery time:</h4>
+                    <div class="flex justify-between">
+                        <input type="time" class="border border-gray-300 p-3 w-full">
+                        <input type="text" class="border border-gray-300 p-3 w-full">
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
     
 </body>
 </html>
