email and password

--- a/src/password.html
+++ b/src/password.html
@@ -31,7 +31,7 @@
                 <div class="py-4">
                     <div>
                         <div>
-                            <label for="password" class="text-sm text-color3 py-2">Email </label>
+                            <label for="password" class="text-sm text-color3 py-2">Password </label>
                             <input type="password" id="password" placeholder="******"
                                 class="border border-gray-300 p-3 w-full">
                         </div>
