email and password

--- a/src/email.html
+++ b/src/email.html
@@ -9,7 +9,7 @@
 </head>
 <body dir="ltr">
 <div class="lg:px-96 md:px-28 lg:py-20 md:py-40 py-10">
-    <div class="p-6 m-4 bg-white rounded-lg shadow-md">
+    <div class="p-6 m-4 bg-white rounded-lg shadow-lg">
         <div>
             <img src="assets/img/email.png" alt="email" class="w-28 h-28" />
         </div>
