--- a/src/orderDetails.html
+++ b/src/orderDetails.html
@@ -8,14 +8,71 @@
     <title>Document</title>
 </head>
 <body dir="ltr">
-    <div class="grid grid-cols-2 gap-4 px-36 py-10">
+    <div class="grid grid-cols-2  px-36 py-10">
         <!-- left side -->
-        <div>
+        <div class="p-6 m-4 bg-white rounded-lg shadow-lg">
             Lorem ipsum dolor sit amet consectetur, adipisicing elit. Porro, repudiandae. At quod aliquam quis similique illum laborum eaque sint aut.
         </div>
         <!-- right side -->
-        <div>
-            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Eligendi nemo tempore dignissimos adipisci, reprehenderit nobis accusamus necessitatibus molestiae eius consectetur.
+        <div class="p-6 m-4 bg-white rounded-lg shadow-lg">
+            <div>
+                <p>Order Details</p>
+            </div>
+            <div>
+                <div>
+                    <p>Your Order from</p>
+                    <p>shop name</p>
+                </div>
+                <div>
+                    <p>Order number</p>
+                    <p>#1111111</p>
+                </div>
+                <div>
+                    <p>Delivery Address</p>
+                    <p>mirpur 10</p>
+                </div>
+            </div>
+            <div>
+                <!-- quantity -->
+                <p>1</p>
+                <!-- food name -->
+                <p>Amarican Burger</p>
+                <!-- price -->
+                <p>BDT 200</p>
+            </div>
+            <div>
+                <div>
+                    <p>Subtotal</p>
+                    <p>BDT 200</p>
+                </div>
+                <div>
+                    <p>Delivery fee</p>
+                    <p>BDT 28</p>
+                </div>
+                <div>
+                    <p>Discount</p>
+                    <p> -BDT 20 B</p>
+                </div>
+                <div>
+                    <p>Incl.Tax</p>
+                    <p>BDT 8</p>
+                </div>
+                <div>
+                    <p>Total <span>(Incl.VAT)</span> </p>
+                    <p>BDT 200</p>
+                </div>
+            </div>
+            <div>
+                <p>Paid With</p>
+                <div>
+                    <p>logo</p>
+                    <p>Cash on delivery</p>
+                    <p>BDT 2000</p>
+                </div>
+            </div>
+            <div>
+                
+            </div>
         </div>
     </div>
     
