--- a/src/password.html
+++ b/src/password.html
@@ -32,10 +32,11 @@
                     <div>
                         <div>
                             <label for="password" class="text-sm text-color3 py-2">Password </label>
+                            <!-- input ay js er kaj hobe (password hide and show er) -->
                             <input type="password" id="password" placeholder="******"
                                 class="border border-gray-300 p-3 w-full">
                         </div>
-
+                        
                         <div class="pt-4">
                             <button class="w-full bg-color1 p-3 text-white uppercase font-semibold  ">Login with password</button>
                         </div>
