--- a/src/orderDetails.html
+++ b/src/orderDetails.html
@@ -8,98 +8,156 @@
     <title>Document</title>
 </head>
 <body dir="ltr">
-    <div class="grid grid-cols-2  px-40 py-10">
+    <div class="grid sm:grid-cols-2 gap-x-4 lg:px-40 md:px-10 px-4 lg:py-10 md:py-36 py-8">
         <!-- left side -->
-        <div class="p-6 m-4 bg-white shadow-lg">
-            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Porro, repudiandae. At quod aliquam quis similique illum laborum eaque sint aut.
+        <div>
+            <div class="p-5 bg-white shadow-lg">
+                <div class="text-center">
+                    <p class="text-color5">Estimated deliver time</p>
+                    <!-- js (time ta daynamic hobe . food deliver hoite koto time lagbe ) -->
+                    <p class="text-3xl font-bold text-color3 mt-3 "> 10-20 min</p>
+                </div>
+                <div class="flex justify-center py-5">
+                    <img src="assets/img/cook3.png" alt="cooking" class="w-36 h-36" >
+                </div>
+                <div>
+                    <!-- daynamic timing (order delivery e kon position ay ase ) -->
+                </div>
+            </div>
+            <div class="p-6 mt-4 bg-white shadow-lg">
+                <div class="flex justify-between">
+                    <div>
+                        logo
+                    </div>
+                    <div class="ps-2">
+                        <p class="text-color5">Rider Contact</p>
+                        <p class="text-color5 ">Ask yor rider for contactless delivery</p>
+                    </div>
+                    <div class="self-center">
+                        <!-- js work (button ta popup hobe and rider er shate contact kora jabe) -->
+                        <button>
+                            <svg class="inline-block" width="35px" height="35px" viewBox="0 0 32 32" id="Layer_3" fill="#661109" version="1.1"
+                                xml:space="preserve" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
+                                <g>
+                                    <path
+                                        d="M29.937,13.688c-0.022-0.066-0.053-0.125-0.088-0.184c-0.02-0.034-0.025-0.072-0.049-0.104   c-0.014-0.019-0.036-0.028-0.051-0.045c-0.046-0.054-0.099-0.096-0.156-0.139c-0.049-0.037-0.095-0.074-0.149-0.101   c-0.056-0.028-0.114-0.044-0.175-0.061c-0.067-0.019-0.132-0.036-0.201-0.041C29.044,13.012,29.024,13,29,13h-9V6   c0-0.04-0.018-0.074-0.023-0.112c-0.008-0.068-0.018-0.134-0.04-0.2c-0.022-0.066-0.053-0.125-0.088-0.184   C19.83,5.47,19.824,5.432,19.8,5.4c-0.014-0.019-0.036-0.028-0.051-0.045c-0.046-0.054-0.099-0.096-0.156-0.139   c-0.049-0.037-0.095-0.074-0.15-0.101c-0.055-0.028-0.114-0.044-0.175-0.061c-0.067-0.019-0.132-0.036-0.202-0.041   C19.044,5.012,19.024,5,19,5H3C2.975,5,2.954,5.012,2.93,5.014C2.863,5.019,2.8,5.035,2.735,5.053   c-0.063,0.018-0.123,0.034-0.18,0.063c-0.054,0.027-0.099,0.063-0.148,0.1c-0.057,0.043-0.11,0.085-0.156,0.139   C2.236,5.372,2.214,5.381,2.2,5.4C2.176,5.432,2.17,5.47,2.151,5.504C2.116,5.563,2.085,5.621,2.063,5.687   c-0.022,0.067-0.033,0.132-0.04,0.2C2.018,5.926,2,5.96,2,6v12c0,0.552,0.447,1,1,1h9v7c0,0.552,0.447,1,1,1h16   c0.553,0,1-0.448,1-1V14c0-0.04-0.018-0.074-0.023-0.112C29.97,13.819,29.959,13.754,29.937,13.688z M26,15l-5,3.75L16,15H26z    M16,7l-5,3.75L6,7H16z M4,17V8l6.4,4.8c0.178,0.133,0.389,0.2,0.6,0.2s0.422-0.067,0.6-0.2L18,8v5h-5   c-0.025,0-0.046,0.012-0.07,0.014c-0.068,0.005-0.13,0.021-0.195,0.039c-0.062,0.018-0.122,0.034-0.179,0.062   c-0.054,0.027-0.1,0.063-0.148,0.1c-0.057,0.043-0.11,0.085-0.156,0.139c-0.015,0.018-0.037,0.026-0.051,0.045   c-0.024,0.032-0.03,0.07-0.049,0.104c-0.035,0.059-0.065,0.117-0.088,0.184c-0.022,0.067-0.033,0.132-0.04,0.2   C12.018,13.926,12,13.96,12,14v3H4z M14,25v-9l6.4,4.8c0.178,0.133,0.389,0.2,0.6,0.2s0.422-0.067,0.6-0.2L28,16v9H14z" />
+                                </g>
+                            </svg>
+                        </button>
+                    </div>
+                </div>
+            </div>
         </div>
         <!-- right side -->
-        <div class="p-5 bg-white shadow-lg">
-            <div class="text-center">
-                <p class="text-2xl font-bold text-color3">Order Details</p>
-            </div>
-            <div class="p-5">
-                <div>
-                    <div class="flex justify-between">
-                        <p class="text-color5">Your Order from</p>
-                        <p class="text-color3  font-medium">shop name</p>
+       <div>
+           <!-- top -->
+            <div>
+                <div class="p-5 lg:mt-0 md:mt-0 mt-4 bg-white shadow-lg">
+                    <div class="text-center">
+                        <p class="text-2xl font-bold text-color3">Order Details</p>
                     </div>
-                    <div class="flex justify-between">
-                        <p class="text-color5">Order number</p>
-                        <p class="text-color3  font-medium">#1111111</p>
-                    </div>
-                    <div class="flex justify-between">
-                        <p class="text-color5">Delivery Address</p>
-                        <p class="text-color3  font-medium">mirpur 10</p>
-                    </div>
-                </div>
-                <div class="py-5" >
-                    <div class="flex justify-between">
-                        <!-- quantity -->
-                        <p class="font-bold text-color1">1 X</p>
-                        <!-- food name -->
-                        <p class="text-color5">Amarican Burger</p>
-                        <!-- price -->
-                        <p class="text-color5">BDT 200</p>
-                    </div>
-                    <div class="flex justify-between">
-                        <!-- quantity -->
-                        <p class="font-bold text-color1">2 X</p>
-                        <!-- food name -->
-                        <p class="text-color5">Beef Burger</p>
-                        <!-- price -->
-                        <p class="text-color5">BDT 400</p>
-                    </div>
-                </div>
-                <div>
-                    <div class="flex justify-between text-color5">
-                        <p>Subtotal</p>
-                        <p>BDT 200</p>
-                    </div>
-                    <div class="flex justify-between text-color5">
-                        <p>Delivery fee</p>
-                        <p>BDT 28</p>
-                    </div>
-                    <div class="flex justify-between text-color5">
-                        <p>Discount</p>
-                        <p> -BDT 20</p>
-                    </div>
-                    <div class="flex justify-between text-color5">
-                        <p>Incl.Tax</p>
-                        <p>BDT 8</p>
-                    </div>
-                    <div class="flex justify-between text-color3 font-semibold pt-3">
-                        <p>Total <span>(Incl.VAT)</span> </p>
-                        <p>BDT 200</p>
-                    </div>
-                </div>
-                <div class="py-5">
-                    <p class="text-color3 font-bold text-lg">Paid With</p>
-                    <div class="flex justify-between text-color5">
-                        <svg class="inline-block w-10 h-10" viewBox="0 0 512 512" xmlns="http://www.w3.org/2000/svg">
-                            <title />
-                            <g id="Cash">
-                                <path
-                                    d="M476,88H36a7.9979,7.9979,0,0,0-8,8V336a7.9979,7.9979,0,0,0,8,8H476a7.9979,7.9979,0,0,0,8-8V96A7.9979,7.9979,0,0,0,476,88Zm-8,240H44V104H468Z" />
-                                <path
-                                    d="M76,272a24.0262,24.0262,0,0,1,24,24,7.9979,7.9979,0,0,0,8,8h76a8,8,0,0,0,0-16H115.1953A40.119,40.119,0,0,0,84,256.8047V175.1953A40.119,40.119,0,0,0,115.1953,144H184a8,8,0,0,0,0-16H108a7.9979,7.9979,0,0,0-8,8,24.0262,24.0262,0,0,1-24,24,7.9979,7.9979,0,0,0-8,8v96A7.9979,7.9979,0,0,0,76,272Z" />
-                                <path
-                                    d="M328.0039,144h68.8008A40.119,40.119,0,0,0,428,175.1953v81.6094A40.119,40.119,0,0,0,396.8047,288H328.0039a8,8,0,1,0,0,16H404a7.9979,7.9979,0,0,0,8-8,24.0262,24.0262,0,0,1,24-24,7.9979,7.9979,0,0,0,8-8V168a7.9979,7.9979,0,0,0-8-8,24.0262,24.0262,0,0,1-24-24,7.9979,7.9979,0,0,0-8-8H328.0039a8,8,0,0,0,0,16Z" />
-                                <path
-                                    d="M256,284a68,68,0,1,0-68-68A68.0785,68.0785,0,0,0,256,284Zm0-120a52,52,0,1,1-52,52A52.06,52.06,0,0,1,256,164Z" />
-                                <path d="M476,368H36a8,8,0,0,0,0,16H476a8,8,0,0,0,0-16Z" />
-                                <path d="M476,408H36a8,8,0,0,0,0,16H476a8,8,0,0,0,0-16Z" />
-                            </g>
-                        </svg>
-                        <p class=" self-center" >Cash on delivery</p>
-                        <p class=" self-center">BDT 2000</p>
-                    </div>
-                </div>
-                <div>
+                    <div class="p-5">
+                        <!-- shop and customer details -->
+                        <div class="mb-2">
+                            <div class="flex justify-between">
+                                <p class="text-color5">Your Order from</p>
+                                <p class="text-color3  font-medium">shop name</p>
+                            </div>
+                            <div class="flex justify-between">
+                                <p class="text-color5">Order number</p>
+                                <p class="text-color3  font-medium">#1111111</p>
+                            </div>
+                            <div class="flex justify-between">
+                                <p class="text-color5">Delivery Address</p>
+                                <p class="text-color3  font-medium">mirpur 10</p>
+                            </div>
+                        </div>
+                        <!-- order details -->
+                        <div class="border-t-2 border-b-2 border-color5 py-4">
+                            <div class="flex justify-between">
+                                <!-- quantity -->
+                                <p class="font-bold text-color1">1 X</p>
+                                <!-- food name -->
+                                <p class="text-color5">Amarican Burger</p>
+                                <!-- price -->
+                                <p class="text-color5">BDT 200</p>
+                            </div>
+                            <div class="flex justify-between">
+                                <!-- quantity -->
+                                <p class="font-bold text-color1">2 X</p>
+                                <!-- food name -->
+                                <p class="text-color5">Beef Burger</p>
+                                <!-- price -->
+                                <p class="text-color5">BDT 400</p>
+                            </div>
+                        </div>
+                        <div class="mt-2">
+                            <div class="flex justify-between text-color5">
+                                <p>Subtotal</p>
+                                <p>BDT 200</p>
+                            </div>
+                            <div class="flex justify-between text-color5">
+                                <p>Delivery fee</p>
+                                <p>BDT 28</p>
+                            </div>
+                            <div class="flex justify-between text-color5">
+                                <p>Discount</p>
+                                <p> -BDT 20</p>
+                            </div>
+                            <div class="flex justify-between text-color5">
+                                <p>Incl.Tax</p>
+                                <p>BDT 8</p>
+                            </div>
+                            <div class="flex justify-between text-color3 font-semibold pt-3">
+                                <p>Total <span>(Incl.VAT)</span> </p>
+                                <p>BDT 200</p>
+                            </div>
+                        </div>
+                        <div class="py-5">
+                            <p class="text-color3 font-bold text-lg">Paid With</p>
+                            <div class="flex justify-between text-color5">
+                                <svg class="inline-block w-10 h-10" viewBox="0 0 512 512" xmlns="http://www.w3.org/2000/svg">
+                                    <title />
+                                    <g id="Cash">
+                                        <path
+                                            d="M476,88H36a7.9979,7.9979,0,0,0-8,8V336a7.9979,7.9979,0,0,0,8,8H476a7.9979,7.9979,0,0,0,8-8V96A7.9979,7.9979,0,0,0,476,88Zm-8,240H44V104H468Z" />
+                                        <path
+                                            d="M76,272a24.0262,24.0262,0,0,1,24,24,7.9979,7.9979,0,0,0,8,8h76a8,8,0,0,0,0-16H115.1953A40.119,40.119,0,0,0,84,256.8047V175.1953A40.119,40.119,0,0,0,115.1953,144H184a8,8,0,0,0,0-16H108a7.9979,7.9979,0,0,0-8,8,24.0262,24.0262,0,0,1-24,24,7.9979,7.9979,0,0,0-8,8v96A7.9979,7.9979,0,0,0,76,272Z" />
+                                        <path
+                                            d="M328.0039,144h68.8008A40.119,40.119,0,0,0,428,175.1953v81.6094A40.119,40.119,0,0,0,396.8047,288H328.0039a8,8,0,1,0,0,16H404a7.9979,7.9979,0,0,0,8-8,24.0262,24.0262,0,0,1,24-24,7.9979,7.9979,0,0,0,8-8V168a7.9979,7.9979,0,0,0-8-8,24.0262,24.0262,0,0,1-24-24,7.9979,7.9979,0,0,0-8-8H328.0039a8,8,0,0,0,0,16Z" />
+                                        <path
+                                            d="M256,284a68,68,0,1,0-68-68A68.0785,68.0785,0,0,0,256,284Zm0-120a52,52,0,1,1-52,52A52.06,52.06,0,0,1,256,164Z" />
+                                        <path d="M476,368H36a8,8,0,0,0,0,16H476a8,8,0,0,0,0-16Z" />
+                                        <path d="M476,408H36a8,8,0,0,0,0,16H476a8,8,0,0,0,0-16Z" />
+                                    </g>
+                                </svg>
+                                <p class=" self-center">Cash on delivery</p>
+                                <p class=" self-center">BDT 2000</p>
+                            </div>
+                        </div>
+                        <div>
                 
+                        </div>
+                    </div>
                 </div>
             </div>
-        </div>
+            <!-- bottom  -->
+            <div>
+                <div class="p-5 mt-4 bg-white shadow-lg">
+                    <div class="text-center">
+                        <div>
+                            <p class="text-2xl font-bold text-color3">Need Support ?</p>
+                            <p class="text-sm text-color5">Questions regarding your order ? Reach out of us .</p>
+                        </div>
+                        <div class="py-4">
+                            <!-- help center er click korle ekta popup asbe.. oikhane help er son term asbe.. food cancel er option oikhnae e asbe.. food cancel er er ekta fixed time ase oi time er por r cancel korte parbe na -->
+                            <button class="px-6 py-2 border-2 border-color1 font-bold text-color3 uppercase "> Help Center</button>
+                        </div>
+                    </div>
+
+                </div>
+            </div>
+       </div>
     </div>
     
 </body>
