--- a/src/profile.html
+++ b/src/profile.html
@@ -7,8 +7,8 @@
     <link rel="stylesheet" href="/public/assets/css/app.css">
 
     <title>Document</title>
-</head>``
-<body>
+</head>
+<body dir="ltr">
     <div class="min-h-screen flex-wrap items-center justify-center ">
         <div class="p-10 flex items-center justify-center">
            <div>
