--- a/src/BillingPart2.html
+++ b/src/BillingPart2.html
@@ -5,14 +5,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/public/assets/css/app.css">
+    <link rel="stylesheet" href="../public/assets/css/app.css">
     <title>Document</title>
 </head>
 <body dir="ltr">
     <div class="lg:px-36 md:px-20 px-1  py-10">
-        <p class="text-4xl text-color3 font-bold">Order overview, delivery orders paid online</p>
+        <p class="text-4xl text-black font-bold">Order overview, delivery orders paid online</p>
         <div class="mt-3">
-            <div class="grid grid-cols-7 text-center font-bold border-b-2 border-color1">
+            <div class="grid grid-cols-7 text-center font-bold border-b-2 border-black">
                 <p>Serial No.</p>
                 <p>Order number</p>
                 <p>Date</p>
@@ -208,7 +208,7 @@
                 <p></p>
                 <p>BDT -205,00</p>
             </div>
-            <div class="grid grid-cols-7 text-center border-t-2 border-color1">
+            <div class="grid grid-cols-7 text-center border-t-2 border-black">
                 <p></p>
                 <p></p>
                 <p></p>
@@ -219,7 +219,7 @@
             </div>
         </div>
         <footer>
-            <div class="grid lg:grid-cols-4 md:grid-cols-4 grid-cols-2 gap-1 mt-10 pt-1 border-t-2 border-color3">
+            <div class="grid lg:grid-cols-4 md:grid-cols-4 grid-cols-2 gap-1 mt-10 pt-1 border-t-2 border-black">
                 <div>
                     <p class="font-bold">Postal address</p>
                     <div class="leading-4 self-center py-3">
