--- a/src/Billing.html
+++ b/src/Billing.html
@@ -5,13 +5,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/public/assets/css/app.css">
+    <link rel="stylesheet" href="../public/assets/css/app.css">
 
     <title>Document</title>
 </head>
 <body  dir="ltr">
     <div class="lg:px-36 md:px-20 px-1  py-10">
-        <div class="flex justify-between border-b-2 p-2 border-color1">
+        <div class="flex justify-between border-b-2 p-2 border-black">
             <div class="leading-4 self-center">
                 <p>Indeat</p>
                 <p>Rokeya soroni</p>
@@ -38,7 +38,7 @@
             </div>
         </div>
         <!-- ===== -->
-        <div class="grid grid-cols-2 px-6 py-3 border-b-2 border-color5" >
+        <div class="grid grid-cols-2 px-6 py-3 border-b-2 border-gray-300" >
             <div>
                 <div class="flex justify-between">
                     <p>Invoice number:</p>
@@ -82,7 +82,7 @@
         <!-- ==== -->
         
         <div>
-            <div class="grid grid-cols-5  border-b-2 border-color3 p-1 font-bold">
+            <div class="grid grid-cols-5  border-b-2 border-black p-1 font-bold">
                 <p class="col-span-2">Description</p>
                 <p class="text-center">Quantity</p>
                 <p>Amount</p>
@@ -102,7 +102,7 @@
             </div>
             <div class="grid grid-cols-2">
                 <div></div>
-                <div class="border-t-2 border-color5">
+                <div class="border-t-2 border-gray-300">
                     <div class="grid grid-cols-2 px-3 pt-3">
                         <p class="font-bold">Your sales excluding VAT</p>
                         <p class="ps-10 ">BDT 2000</p>
@@ -113,7 +113,7 @@
                     </div>
                 </div>
             </div>
-            <div class="grid grid-cols-5 p-2 border-t-2 border-color3">
+            <div class="grid grid-cols-5 p-2 border-t-2 border-black">
                 <p class="col-span-2 font-bold">Fee for promotion, fixed cost</p>
                 <p class="text-center">23</p>
                 <p>BDT -2000</p>
@@ -121,7 +121,7 @@
             </div>
             <div class="grid grid-cols-2">
                 <div></div>
-                <div class="border-t-2 border-color5">
+                <div class="border-t-2 border-gray-300">
                     <div class="grid grid-cols-2 px-3 pt-3">
                         <p class="font-bold">foodora's sales excluding VAT</p>
                         <p class="ps-10 self-center ">BDT -200</p>
@@ -132,7 +132,7 @@
                     </div>
                 </div>
             </div>
-            <div class="grid grid-cols-2 border-t-2 border-color3">
+            <div class="grid grid-cols-2 border-t-2 border-black">
                 <div></div>
                 <div>
                     <div class="grid grid-cols-2 p-2">
@@ -141,7 +141,7 @@
                     </div>
                 </div>
             </div>
-            <div class="grid grid-cols-2 border-t-2 border-color3">
+            <div class="grid grid-cols-2 border-t-2 border-black">
                 <div></div>
                 <div>
                     <div class="grid grid-cols-2 p-2">
@@ -157,7 +157,7 @@
         </div>
 
         <footer>
-            <div class="grid lg:grid-cols-4 md:grid-cols-4 grid-cols-2 gap-1 mt-10 pt-1 border-t-2 border-color3">
+            <div class="grid lg:grid-cols-4 md:grid-cols-4 grid-cols-2 gap-1 mt-10 pt-1 border-t-2 border-black">
                 <div>
                     <p class="font-bold">Postal address</p>
                     <div class="leading-4 self-center py-3">
