--- a/src/contact.html
+++ b/src/contact.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -8,6 +9,7 @@
 
     <title>Document</title>
 </head>
+
 <body dir="ltr">
     <div class="lg:px-16 md:px-4 px-4 py-10 ">
         <div class="sm:grid sm:grid-cols-3 lg:gap-4 md:gap-3">
@@ -34,8 +36,8 @@
                     </div>
                     <!-- popup : addPayment page -->
                     <button>
-                        <svg class="inline-block w-6 h-6 self-center" xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" viewBox="0 0 20 20"
-                            fill="currentColor">
+                        <svg class="inline-block w-6 h-6 self-center" xmlns="http://www.w3.org/2000/svg" class="h-5 w-5"
+                            viewBox="0 0 20 20" fill="currentColor">
                             <path fill-rule="evenodd"
                                 d="M7.293 14.707a1 1 0 010-1.414L10.586 10 7.293 6.707a1 1 0 011.414-1.414l4 4a1 1 0 010 1.414l-4 4a1 1 0 01-1.414 0z"
                                 clip-rule="evenodd" />
@@ -50,8 +52,8 @@
                     </div>
                     <!-- popup :address -->
                     <button>
-                        <svg class="inline-block w-6 h-6 self-center" xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" viewBox="0 0 20 20"
-                            fill="currentColor">
+                        <svg class="inline-block w-6 h-6 self-center" xmlns="http://www.w3.org/2000/svg" class="h-5 w-5"
+                            viewBox="0 0 20 20" fill="currentColor">
                             <path fill-rule="evenodd"
                                 d="M7.293 14.707a1 1 0 010-1.414L10.586 10 7.293 6.707a1 1 0 011.414-1.414l4 4a1 1 0 010 1.414l-4 4a1 1 0 01-1.414 0z"
                                 clip-rule="evenodd" />
@@ -65,21 +67,21 @@
                         <p class="text-xs text-color3">Get $10.00 free</p>
                     </div>
                     <!-- popup : addFriend -->
-                   <button>
-                        <svg class="inline-block w-6 h-6 self-center" xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" viewBox="0 0 20 20"
-                            fill="currentColor">
+                    <button>
+                        <svg class="inline-block w-6 h-6 self-center" xmlns="http://www.w3.org/2000/svg" class="h-5 w-5"
+                            viewBox="0 0 20 20" fill="currentColor">
                             <path fill-rule="evenodd"
                                 d="M7.293 14.707a1 1 0 010-1.414L10.586 10 7.293 6.707a1 1 0 011.414-1.414l4 4a1 1 0 010 1.414l-4 4a1 1 0 01-1.414 0z"
                                 clip-rule="evenodd" />
                         </svg>
-                   </button>
+                    </button>
                 </div>
                 <!-- ==== -->
                 <div class="flex justify-between py-4 px-4 border-b border-gray-400">
                     <div class="flex">
                         <div class="bg-red-100 hover:bg-red-200 px-2 py-2 rounded-full">
-                            <svg xmlns="http://www.w3.org/2000/svg" class="inline-block h-7 w-7 " fill="none"
-                                viewBox="0 0 24 24" stroke="#3B0201">
+                            <svg xmlns="http://www.w3.org/2000/svg" class="inline-block h-7 w-7 " fill="none" viewBox="0 0 24 24"
+                                stroke="#3B0201">
                                 <path d="M9 17a2 2 0 11-4 0 2 2 0 014 0zM19 17a2 2 0 11-4 0 2 2 0 014 0z" />
                                 <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
                                     d="M13 16V6a1 1 0 00-1-1H4a1 1 0 00-1 1v10a1 1 0 001 1h1m8-1a1 1 0 01-1 1H9m4-1V8a1 1 0 011-1h2.586a1 1 0 01.707.293l3.414 3.414a1 1 0 01.293.707V16a1 1 0 01-1 1h-1m-6-1a1 1 0 001 1h1M5 17a2 2 0 104 0m-4 0a2 2 0 114 0m6 0a2 2 0 104 0m-4 0a2 2 0 114 0" />
@@ -87,8 +89,8 @@
                         </div>
                         <p class="text-gray-800 self-center ps-2">Delivery Support</p>
                     </div>
-                    <svg class="inline-block w-6 h-6 self-center" xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" viewBox="0 0 20 20"
-                        fill="currentColor">
+                    <svg class="inline-block w-6 h-6 self-center" xmlns="http://www.w3.org/2000/svg" class="h-5 w-5"
+                        viewBox="0 0 20 20" fill="currentColor">
                         <path fill-rule="evenodd"
                             d="M7.293 14.707a1 1 0 010-1.414L10.586 10 7.293 6.707a1 1 0 011.414-1.414l4 4a1 1 0 010 1.414l-4 4a1 1 0 01-1.414 0z"
                             clip-rule="evenodd" />
@@ -98,7 +100,8 @@
                 <div class="flex justify-between py-4 px-4 border-b border-gray-400">
                     <div class="flex">
                         <div class="bg-red-100 hover:bg-red-200 px-2 py-2 rounded-full">
-                            <svg xmlns="http://www.w3.org/2000/svg" class="inline-block h-6 w-6 " fill="none" viewBox="0 0 24 24" stroke="#3B0201">
+                            <svg xmlns="http://www.w3.org/2000/svg" class="inline-block h-6 w-6 " fill="none" viewBox="0 0 24 24"
+                                stroke="#3B0201">
                                 <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
                                     d="M3 5a2 2 0 012-2h3.28a1 1 0 01.948.684l1.498 4.493a1 1 0 01-.502 1.21l-2.257 1.13a11.042 11.042 0 005.516 5.516l1.13-2.257a1 1 0 011.21-.502l4.493 1.498a1 1 0 01.684.949V19a2 2 0 01-2 2h-1C9.716 21 3 14.284 3 6V5z" />
                             </svg>
@@ -107,8 +110,8 @@
                     </div>
                     <!-- show contact page -->
                     <button>
-                        <svg class="inline-block w-6 h-6 self-center" xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" viewBox="0 0 20 20"
-                            fill="currentColor">
+                        <svg class="inline-block w-6 h-6 self-center" xmlns="http://www.w3.org/2000/svg" class="h-5 w-5"
+                            viewBox="0 0 20 20" fill="currentColor">
                             <path fill-rule="evenodd"
                                 d="M7.293 14.707a1 1 0 010-1.414L10.586 10 7.293 6.707a1 1 0 011.414-1.414l4 4a1 1 0 010 1.414l-4 4a1 1 0 01-1.414 0z"
                                 clip-rule="evenodd" />
@@ -119,15 +122,16 @@
                 <div class="flex justify-between py-4 px-4 border-b border-gray-400">
                     <div class="flex">
                         <div class="bg-red-100 hover:bg-red-200 px-2 py-2 rounded-full">
-                        <svg xmlns="http://www.w3.org/2000/svg" class="inline-block h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="#3B0201">
-                            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
-                                d="M13 16h-1v-4h-1m1-4h.01M21 12a9 9 0 11-18 0 9 9 0 0118 0z" />
-                        </svg>
+                            <svg xmlns="http://www.w3.org/2000/svg" class="inline-block h-6 w-6" fill="none" viewBox="0 0 24 24"
+                                stroke="#3B0201">
+                                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                                    d="M13 16h-1v-4h-1m1-4h.01M21 12a9 9 0 11-18 0 9 9 0 0118 0z" />
+                            </svg>
                         </div>
                         <p class="text-gray-800 self-center ps-2">Terms of use</p>
                     </div>
-                    <svg class="inline-block w-6 h-6 self-center" xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" viewBox="0 0 20 20"
-                        fill="currentColor">
+                    <svg class="inline-block w-6 h-6 self-center" xmlns="http://www.w3.org/2000/svg" class="h-5 w-5"
+                        viewBox="0 0 20 20" fill="currentColor">
                         <path fill-rule="evenodd"
                             d="M7.293 14.707a1 1 0 010-1.414L10.586 10 7.293 6.707a1 1 0 011.414-1.414l4 4a1 1 0 010 1.414l-4 4a1 1 0 01-1.414 0z"
                             clip-rule="evenodd" />
@@ -136,45 +140,36 @@
                 <!-- ==== -->
                 <div class="flex justify-between py-4 px-4">
                     <div class="flex">
-                        <div class="bg-red-100 hover:bg-red-200 px-2 py-2 rounded-full" >
-                            <svg xmlns="http://www.w3.org/2000/svg" class="inline-block h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="#3B0201">
+                        <div class="bg-red-100 hover:bg-red-200 px-2 py-2 rounded-full">
+                            <svg xmlns="http://www.w3.org/2000/svg" class="inline-block h-6 w-6" fill="none" viewBox="0 0 24 24"
+                                stroke="#3B0201">
                                 <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
                                     d="M12 15v2m-6 4h12a2 2 0 002-2v-6a2 2 0 00-2-2H6a2 2 0 00-2 2v6a2 2 0 002 2zm10-10V7a4 4 0 00-8 0v4h8z" />
                             </svg>
                         </div>
                         <p class="text-gray-800 self-center ps-2">Privacy policy</p>
                     </div>
-                    <!-- show privacyPolicy page -->
-                    <button>
-                        <svg class="inline-block w-6 h-6 self-center" xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" viewBox="0 0 20 20"
-                            fill="currentColor">
-                            <path fill-rule="evenodd"
-                                d="M7.293 14.707a1 1 0 010-1.414L10.586 10 7.293 6.707a1 1 0 011.414-1.414l4 4a1 1 0 010 1.414l-4 4a1 1 0 01-1.414 0z"
-                                clip-rule="evenodd" />
-                        </svg>
-                    </button>
+                    <svg class="inline-block w-6 h-6 self-center" xmlns="http://www.w3.org/2000/svg" class="h-5 w-5"
+                        viewBox="0 0 20 20" fill="currentColor">
+                        <path fill-rule="evenodd"
+                            d="M7.293 14.707a1 1 0 010-1.414L10.586 10 7.293 6.707a1 1 0 011.414-1.414l4 4a1 1 0 010 1.414l-4 4a1 1 0 01-1.414 0z"
+                            clip-rule="evenodd" />
+                    </svg>
                 </div>
             </div>
             <div class="bg-white shadow-lg rounded col-span-2 px-8 pt-6 pb-8 mb-4">
-                <div>
-                    <p class="text-lg font-semibold pb-6">My Account</p>
+                <div class="pb-6">
+                    <p class="text-lg font-semibold">Tell us about yourself</p>
+                    <p class="text-sm text-gray-400">Whether you have questions or you would just like to say hello, contact us</p>
                 </div>
                 <form>
                     <div class="mb-4">
-                        <label class="block text-gray-700 text-sm  mb-2" for="firstName">
-                            First Name
+                        <label class="block text-gray-700 text-sm  mb-2" for="name">
+                            Name
                         </label>
                         <input
                             class="shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline"
-                            id="firstName" type="text" placeholder="Gurdeep">
-                    </div>
-                    <div class="mb-4">
-                        <label class="block text-gray-700 text-sm  mb-2" for="lastName">
-                            Last Name
-                        </label>
-                        <input
-                            class="shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline"
-                            id="lastName" type="text" placeholder="Singh">
+                            id="name" type="text" placeholder="Gurdeep Singh">
                     </div>
                     <div class="mb-4">
                         <label class="block text-gray-700 text-sm  mb-2" for="mobileNumber">
@@ -192,6 +187,16 @@
                             class="shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline"
                             id="email" type="tel" placeholder="gurdeepSinhg123@gamil.com">
                     </div>
+                    <div class="mb-4">
+                        <label for="help" class="block text-sm font-medium upp# text-gray-700">
+                            How can we help you ?
+                        </label>
+                        <div class="mt-1">
+                            <textarea id="help" name="help" rows="3"
+                                class=" px-2 py-2 shadow-sm focus:ring-indigo-500 focus:border-indigo-500 mt-1 block w-full sm:text-sm border border-gray-300 rounded-md"
+                                placeholder="Brief description"></textarea>
+                        </div>
+                    </div>
                     <div
                         class="text-center bg-color1 hover:bg-color3 text-white  rounded focus:outline-none focus:shadow-outline uppercase">
                         <button class="py-1 " type="button">
@@ -199,31 +204,14 @@
                         </button>
                     </div>
                 </form>
-                <div>
-                    <div class="mt-4 border border-gray-200 rounded">
-                        <a class="py-3 px-3 block flex justify-between " href="#">
-                            <p class="text-sm">Change password</p>
-                            <svg xmlns="http://www.w3.org/2000/svg" class="inline-block h-4 w-4" viewBox="0 0 20 20" fill="gray">
-                                <path fill-rule="evenodd"
-                                    d="M12.293 5.293a1 1 0 011.414 0l4 4a1 1 0 010 1.414l-4 4a1 1 0 01-1.414-1.414L14.586 11H3a1 1 0 110-2h11.586l-2.293-2.293a1 1 0 010-1.414z"
-                                    clip-rule="evenodd" />
-                            </svg>
-                        </a>
+                <div class="mt-3">
+                    <div class="text-center border border-black">
+                        map
                     </div>
-                    <div class="mt-4 border border-gray-200 rounded">
-                        <a class="py-3 px-3 block flex justify-between " href="#">
-                            <p class="text-sm">Forget password</p>
-                            <svg xmlns="http://www.w3.org/2000/svg" class="inline-block h-4 w-4" viewBox="0 0 20 20" fill="gray">
-                                <path fill-rule="evenodd"
-                                    d="M12.293 5.293a1 1 0 011.414 0l4 4a1 1 0 010 1.414l-4 4a1 1 0 01-1.414-1.414L14.586 11H3a1 1 0 110-2h11.586l-2.293-2.293a1 1 0 010-1.414z"
-                                    clip-rule="evenodd" />
-                            </svg>
-                        </a>
-                    </div>
-                
                 </div>
             </div>
         </div>
-    </div>    
+    </div>
 </body>
+
 </html>
