--- a/src/contact.html
+++ b/src/contact.html
@@ -10,154 +10,156 @@
     <title>Document</title>
 </head>
 
-<body dir="ltr">
+<body dir="ltr" class="bg-gray-100">
     <div class="lg:px-16 md:px-4 px-4 py-10 ">
         <div class="sm:grid sm:grid-cols-3 lg:gap-4 md:gap-3">
-            <div class="bg-white rounded shadow-lg  mb-2">
-                <div class="flex justify-between mt-2 lg:px-10 md:px-1 px-8 py-4">
-                    <div>
-                        <img src="../public/img/user.jpg" alt="user_image" class="w-16 h-16 rounded-full">
+            <div>
+                <div class="bg-white rounded shadow-lg  mb-2">
+                    <div class="flex justify-between mt-2 lg:px-10 md:px-1 px-8 py-4">
+                        <div>
+                            <img src="../public/img/user.jpg" alt="user_image" class="w-16 h-16 rounded-full">
+                        </div>
+                        <div class="self-center">
+                            <!-- dashboard er link -->
+                            <a href="#" class="text-color3 font-semibold">Gurdeep Singh</a>
+                            <p class="text-xs text-gray-500 ">gurdeepSinhg123@gmail.com</p>
+                        </div>
                     </div>
-                    <div class="self-center">
-                        <!-- dashboard er link -->
-                        <a href="#" class="text-color3 font-semibold">Gurdeep Singh</a>
-                        <p class="text-xs text-gray-500 ">gurdeepSinhg123@gmail.com</p>
+                    <div class="flex justify-between bg-gray-100 py-4 px-4 ">
+                        <p>Accounts Credits</p>
+                        <p class="text-color3">$52.25</p>
                     </div>
-                </div>
-                <div class="flex justify-between bg-gray-100 py-4 px-4 ">
-                    <p>Accounts Credits</p>
-                    <p class="text-color3">$52.25</p>
-                </div>
-                <!-- === -->
-                <div class="flex justify-between py-4 px-4 border-b border-gray-400">
-                    <div>
-                        <p class="text-gray-800">Payment Card</p>
-                        <p class="text-xs text-gray-500">Add a Credit or Debit card</p>
+                    <!-- === -->
+                    <div class="flex justify-between py-4 px-4 border-b border-gray-400">
+                        <div>
+                            <p class="text-gray-800">Payment Card</p>
+                            <p class="text-xs text-gray-500">Add a Credit or Debit card</p>
+                        </div>
+                        <!-- popup : addPayment page -->
+                        <button>
+                            <svg class="inline-block w-6 h-6 self-center" xmlns="http://www.w3.org/2000/svg" class="h-5 w-5"
+                                viewBox="0 0 20 20" fill="currentColor">
+                                <path fill-rule="evenodd"
+                                    d="M7.293 14.707a1 1 0 010-1.414L10.586 10 7.293 6.707a1 1 0 011.414-1.414l4 4a1 1 0 010 1.414l-4 4a1 1 0 01-1.414 0z"
+                                    clip-rule="evenodd" />
+                            </svg>
+                        </button>
                     </div>
-                    <!-- popup : addPayment page -->
-                    <button>
+                    <!-- ==== -->
+                    <div class="flex justify-between py-4 px-4 border-b border-gray-400">
+                        <div>
+                            <p class="text-gray-800">Address</p>
+                            <p class="text-xs text-gray-500">Add or remove a delivery address</p>
+                        </div>
+                        <!-- popup :address -->
+                        <button>
+                            <svg class="inline-block w-6 h-6 self-center" xmlns="http://www.w3.org/2000/svg" class="h-5 w-5"
+                                viewBox="0 0 20 20" fill="currentColor">
+                                <path fill-rule="evenodd"
+                                    d="M7.293 14.707a1 1 0 010-1.414L10.586 10 7.293 6.707a1 1 0 011.414-1.414l4 4a1 1 0 010 1.414l-4 4a1 1 0 01-1.414 0z"
+                                    clip-rule="evenodd" />
+                            </svg>
+                        </button>
+                    </div>
+                    <!-- ==== -->
+                    <div class="flex justify-between py-4 px-4 border-b border-gray-400">
+                        <div>
+                            <p class="text-gray-900">Refer Friends</p>
+                            <p class="text-xs text-color3">Get $10.00 free</p>
+                        </div>
+                        <!-- popup : addFriend -->
+                        <button>
+                            <svg class="inline-block w-6 h-6 self-center" xmlns="http://www.w3.org/2000/svg" class="h-5 w-5"
+                                viewBox="0 0 20 20" fill="currentColor">
+                                <path fill-rule="evenodd"
+                                    d="M7.293 14.707a1 1 0 010-1.414L10.586 10 7.293 6.707a1 1 0 011.414-1.414l4 4a1 1 0 010 1.414l-4 4a1 1 0 01-1.414 0z"
+                                    clip-rule="evenodd" />
+                            </svg>
+                        </button>
+                    </div>
+                    <!-- ==== -->
+                    <div class="flex justify-between py-4 px-4 border-b border-gray-400">
+                        <div class="flex">
+                            <div class="bg-red-100 hover:bg-red-200 px-2 py-2 rounded-full">
+                                <svg xmlns="http://www.w3.org/2000/svg" class="inline-block h-7 w-7 " fill="none" viewBox="0 0 24 24"
+                                    stroke="#3B0201">
+                                    <path d="M9 17a2 2 0 11-4 0 2 2 0 014 0zM19 17a2 2 0 11-4 0 2 2 0 014 0z" />
+                                    <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                                        d="M13 16V6a1 1 0 00-1-1H4a1 1 0 00-1 1v10a1 1 0 001 1h1m8-1a1 1 0 01-1 1H9m4-1V8a1 1 0 011-1h2.586a1 1 0 01.707.293l3.414 3.414a1 1 0 01.293.707V16a1 1 0 01-1 1h-1m-6-1a1 1 0 001 1h1M5 17a2 2 0 104 0m-4 0a2 2 0 114 0m6 0a2 2 0 104 0m-4 0a2 2 0 114 0" />
+                                </svg>
+                            </div>
+                            <p class="text-gray-800 self-center ps-2">Delivery Support</p>
+                        </div>
                         <svg class="inline-block w-6 h-6 self-center" xmlns="http://www.w3.org/2000/svg" class="h-5 w-5"
                             viewBox="0 0 20 20" fill="currentColor">
                             <path fill-rule="evenodd"
                                 d="M7.293 14.707a1 1 0 010-1.414L10.586 10 7.293 6.707a1 1 0 011.414-1.414l4 4a1 1 0 010 1.414l-4 4a1 1 0 01-1.414 0z"
                                 clip-rule="evenodd" />
                         </svg>
-                    </button>
-                </div>
-                <!-- ==== -->
-                <div class="flex justify-between py-4 px-4 border-b border-gray-400">
-                    <div>
-                        <p class="text-gray-800">Address</p>
-                        <p class="text-xs text-gray-500">Add or remove a delivery address</p>
                     </div>
-                    <!-- popup :address -->
-                    <button>
+                    <!-- ==== ==== -->
+                    <div class="flex justify-between py-4 px-4 border-b border-gray-400">
+                        <div class="flex">
+                            <div class="bg-red-100 hover:bg-red-200 px-2 py-2 rounded-full">
+                                <svg xmlns="http://www.w3.org/2000/svg" class="inline-block h-6 w-6 " fill="none" viewBox="0 0 24 24"
+                                    stroke="#3B0201">
+                                    <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                                        d="M3 5a2 2 0 012-2h3.28a1 1 0 01.948.684l1.498 4.493a1 1 0 01-.502 1.21l-2.257 1.13a11.042 11.042 0 005.516 5.516l1.13-2.257a1 1 0 011.21-.502l4.493 1.498a1 1 0 01.684.949V19a2 2 0 01-2 2h-1C9.716 21 3 14.284 3 6V5z" />
+                                </svg>
+                            </div>
+                            <p class="text-gray-800 self-center ps-2">Contact</p>
+                        </div>
+                        <!-- show contact page -->
+                        <button>
+                            <svg class="inline-block w-6 h-6 self-center" xmlns="http://www.w3.org/2000/svg" class="h-5 w-5"
+                                viewBox="0 0 20 20" fill="currentColor">
+                                <path fill-rule="evenodd"
+                                    d="M7.293 14.707a1 1 0 010-1.414L10.586 10 7.293 6.707a1 1 0 011.414-1.414l4 4a1 1 0 010 1.414l-4 4a1 1 0 01-1.414 0z"
+                                    clip-rule="evenodd" />
+                            </svg>
+                        </button>
+                    </div>
+                    <!-- ===== -->
+                    <div class="flex justify-between py-4 px-4 border-b border-gray-400">
+                        <div class="flex">
+                            <div class="bg-red-100 hover:bg-red-200 px-2 py-2 rounded-full">
+                                <svg xmlns="http://www.w3.org/2000/svg" class="inline-block h-6 w-6" fill="none" viewBox="0 0 24 24"
+                                    stroke="#3B0201">
+                                    <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                                        d="M13 16h-1v-4h-1m1-4h.01M21 12a9 9 0 11-18 0 9 9 0 0118 0z" />
+                                </svg>
+                            </div>
+                            <p class="text-gray-800 self-center ps-2">Terms of use</p>
+                        </div>
                         <svg class="inline-block w-6 h-6 self-center" xmlns="http://www.w3.org/2000/svg" class="h-5 w-5"
                             viewBox="0 0 20 20" fill="currentColor">
                             <path fill-rule="evenodd"
                                 d="M7.293 14.707a1 1 0 010-1.414L10.586 10 7.293 6.707a1 1 0 011.414-1.414l4 4a1 1 0 010 1.414l-4 4a1 1 0 01-1.414 0z"
                                 clip-rule="evenodd" />
                         </svg>
-                    </button>
-                </div>
-                <!-- ==== -->
-                <div class="flex justify-between py-4 px-4 border-b border-gray-400">
-                    <div>
-                        <p class="text-gray-900">Refer Friends</p>
-                        <p class="text-xs text-color3">Get $10.00 free</p>
                     </div>
-                    <!-- popup : addFriend -->
-                    <button>
+                    <!-- ==== -->
+                    <div class="flex justify-between py-4 px-4">
+                        <div class="flex">
+                            <div class="bg-red-100 hover:bg-red-200 px-2 py-2 rounded-full">
+                                <svg xmlns="http://www.w3.org/2000/svg" class="inline-block h-6 w-6" fill="none" viewBox="0 0 24 24"
+                                    stroke="#3B0201">
+                                    <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                                        d="M12 15v2m-6 4h12a2 2 0 002-2v-6a2 2 0 00-2-2H6a2 2 0 00-2 2v6a2 2 0 002 2zm10-10V7a4 4 0 00-8 0v4h8z" />
+                                </svg>
+                            </div>
+                            <p class="text-gray-800 self-center ps-2">Privacy policy</p>
+                        </div>
                         <svg class="inline-block w-6 h-6 self-center" xmlns="http://www.w3.org/2000/svg" class="h-5 w-5"
                             viewBox="0 0 20 20" fill="currentColor">
                             <path fill-rule="evenodd"
                                 d="M7.293 14.707a1 1 0 010-1.414L10.586 10 7.293 6.707a1 1 0 011.414-1.414l4 4a1 1 0 010 1.414l-4 4a1 1 0 01-1.414 0z"
                                 clip-rule="evenodd" />
                         </svg>
-                    </button>
-                </div>
-                <!-- ==== -->
-                <div class="flex justify-between py-4 px-4 border-b border-gray-400">
-                    <div class="flex">
-                        <div class="bg-red-100 hover:bg-red-200 px-2 py-2 rounded-full">
-                            <svg xmlns="http://www.w3.org/2000/svg" class="inline-block h-7 w-7 " fill="none" viewBox="0 0 24 24"
-                                stroke="#3B0201">
-                                <path d="M9 17a2 2 0 11-4 0 2 2 0 014 0zM19 17a2 2 0 11-4 0 2 2 0 014 0z" />
-                                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
-                                    d="M13 16V6a1 1 0 00-1-1H4a1 1 0 00-1 1v10a1 1 0 001 1h1m8-1a1 1 0 01-1 1H9m4-1V8a1 1 0 011-1h2.586a1 1 0 01.707.293l3.414 3.414a1 1 0 01.293.707V16a1 1 0 01-1 1h-1m-6-1a1 1 0 001 1h1M5 17a2 2 0 104 0m-4 0a2 2 0 114 0m6 0a2 2 0 104 0m-4 0a2 2 0 114 0" />
-                            </svg>
-                        </div>
-                        <p class="text-gray-800 self-center ps-2">Delivery Support</p>
                     </div>
-                    <svg class="inline-block w-6 h-6 self-center" xmlns="http://www.w3.org/2000/svg" class="h-5 w-5"
-                        viewBox="0 0 20 20" fill="currentColor">
-                        <path fill-rule="evenodd"
-                            d="M7.293 14.707a1 1 0 010-1.414L10.586 10 7.293 6.707a1 1 0 011.414-1.414l4 4a1 1 0 010 1.414l-4 4a1 1 0 01-1.414 0z"
-                            clip-rule="evenodd" />
-                    </svg>
-                </div>
-                <!-- ==== ==== -->
-                <div class="flex justify-between py-4 px-4 border-b border-gray-400">
-                    <div class="flex">
-                        <div class="bg-red-100 hover:bg-red-200 px-2 py-2 rounded-full">
-                            <svg xmlns="http://www.w3.org/2000/svg" class="inline-block h-6 w-6 " fill="none" viewBox="0 0 24 24"
-                                stroke="#3B0201">
-                                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
-                                    d="M3 5a2 2 0 012-2h3.28a1 1 0 01.948.684l1.498 4.493a1 1 0 01-.502 1.21l-2.257 1.13a11.042 11.042 0 005.516 5.516l1.13-2.257a1 1 0 011.21-.502l4.493 1.498a1 1 0 01.684.949V19a2 2 0 01-2 2h-1C9.716 21 3 14.284 3 6V5z" />
-                            </svg>
-                        </div>
-                        <p class="text-gray-800 self-center ps-2">Contact</p>
-                    </div>
-                    <!-- show contact page -->
-                    <button>
-                        <svg class="inline-block w-6 h-6 self-center" xmlns="http://www.w3.org/2000/svg" class="h-5 w-5"
-                            viewBox="0 0 20 20" fill="currentColor">
-                            <path fill-rule="evenodd"
-                                d="M7.293 14.707a1 1 0 010-1.414L10.586 10 7.293 6.707a1 1 0 011.414-1.414l4 4a1 1 0 010 1.414l-4 4a1 1 0 01-1.414 0z"
-                                clip-rule="evenodd" />
-                        </svg>
-                    </button>
-                </div>
-                <!-- ===== -->
-                <div class="flex justify-between py-4 px-4 border-b border-gray-400">
-                    <div class="flex">
-                        <div class="bg-red-100 hover:bg-red-200 px-2 py-2 rounded-full">
-                            <svg xmlns="http://www.w3.org/2000/svg" class="inline-block h-6 w-6" fill="none" viewBox="0 0 24 24"
-                                stroke="#3B0201">
-                                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
-                                    d="M13 16h-1v-4h-1m1-4h.01M21 12a9 9 0 11-18 0 9 9 0 0118 0z" />
-                            </svg>
-                        </div>
-                        <p class="text-gray-800 self-center ps-2">Terms of use</p>
-                    </div>
-                    <svg class="inline-block w-6 h-6 self-center" xmlns="http://www.w3.org/2000/svg" class="h-5 w-5"
-                        viewBox="0 0 20 20" fill="currentColor">
-                        <path fill-rule="evenodd"
-                            d="M7.293 14.707a1 1 0 010-1.414L10.586 10 7.293 6.707a1 1 0 011.414-1.414l4 4a1 1 0 010 1.414l-4 4a1 1 0 01-1.414 0z"
-                            clip-rule="evenodd" />
-                    </svg>
-                </div>
-                <!-- ==== -->
-                <div class="flex justify-between py-4 px-4">
-                    <div class="flex">
-                        <div class="bg-red-100 hover:bg-red-200 px-2 py-2 rounded-full">
-                            <svg xmlns="http://www.w3.org/2000/svg" class="inline-block h-6 w-6" fill="none" viewBox="0 0 24 24"
-                                stroke="#3B0201">
-                                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
-                                    d="M12 15v2m-6 4h12a2 2 0 002-2v-6a2 2 0 00-2-2H6a2 2 0 00-2 2v6a2 2 0 002 2zm10-10V7a4 4 0 00-8 0v4h8z" />
-                            </svg>
-                        </div>
-                        <p class="text-gray-800 self-center ps-2">Privacy policy</p>
-                    </div>
-                    <svg class="inline-block w-6 h-6 self-center" xmlns="http://www.w3.org/2000/svg" class="h-5 w-5"
-                        viewBox="0 0 20 20" fill="currentColor">
-                        <path fill-rule="evenodd"
-                            d="M7.293 14.707a1 1 0 010-1.414L10.586 10 7.293 6.707a1 1 0 011.414-1.414l4 4a1 1 0 010 1.414l-4 4a1 1 0 01-1.414 0z"
-                            clip-rule="evenodd" />
-                    </svg>
                 </div>
             </div>
-            <div class="bg-white shadow-lg rounded col-span-2 px-8 pt-6 pb-8 mb-4">
+            <div class="bg-white shadow-lg rounded col-span-2 px-8 pt-6 pb-8 mb-4 mt-2">
                 <div class="pb-6">
                     <p class="text-lg font-semibold">Tell us about yourself</p>
                     <p class="text-sm text-gray-400">Whether you have questions or you would just like to say hello, contact us</p>
