--- a/src/login.html
+++ b/src/login.html
@@ -67,7 +67,7 @@
                                         Forgot Password?
                                     </a>
                                     <p class="">
-                                        Don't have an account ? <a href="#">Sign Up</a>
+                                        Don't have an account ? <a href="#" class="hover:text-color3">Sign Up</a>
                                     </p>
                                 </div>
                             </form>
