--- a/src/registration.html
+++ b/src/registration.html
@@ -74,7 +74,7 @@
                                 </div>
                                 <div class="text-sm text-center text-gray-700 mt-8">
                                     <p class="">
-                                        Already an account ? <a href="#">Sign In</a>
+                                        Already an account ? <a href="#"  class="hover:text-color3">Sign In</a>
                                     </p>
                                 </div>
                             </form>
