--- a/src/emailVarification.html
+++ b/src/emailVarification.html
@@ -24,30 +24,28 @@
 
                     <div class="w-full max-w-md  px-8 pt-16">
                         <div>
-                            <p class="text-4xl">Forget Password</p>
-                            <p class="text-gray-700 text-sm pt-1">Enter your email address below and we'll send you an email with instructions on how to change your password</p>
+                            <p class="text-4xl">Verify your email</p>
+                            <p class="text-gray-700 pt-3">Enter your OTP code here</p>
                         </div>
                         <form class="py-8">
-                            <div class="mb-6">
-                                <label class="block text-gray-700 text-sm font-bold mb-2" for="email">
-                                    Email
-                                </label>
-                                <div class="flex items-center border-b border-gray-500 hover:border-gray-800">
-                                    <input
-                                        class="appearance-none bg-transparent border-none w-full text-gray-700 mr-3 py-1 px-2 leading-tight focus:outline-none"
-                                        type="email" placeholder="xyz@gmail.com">
-                                </div>
+                            <div class="mb-4 grid grid-cols-4 gap-2 text-xl text-black ">
+                                <input class="shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline px-2 py-6 text-center" placeholder="0">
+                                <input class="shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline px-2 py-6 text-center" placeholder="0">
+                                <input class="shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline px-2 py-6 text-center" placeholder="0">
+                                <input class="shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline px-2 py-6 text-center" placeholder="0">
+                                
                             </div>
+                            
                             <div
                                 class="text-center bg-color1 hover:bg-color3 text-white  rounded focus:outline-none focus:shadow-outline uppercase">
                                 <button class="py-3 font-semibold text-lg " type="button">
-                                    Sign up
+                                    Verify Now 
                                 </button>
                             </div>
                         </form>
-                        <div class="text-sm text-center text-gray-700 ">
+                        <div class="text-sm text-center text-gray-700">
                             <p class="">
-                                Already an account ? <a href="#"  class="hover:text-color3">Sign In</a>
+                                Already an account ? <a href="#" class="hover:text-color3">Sign In</a>
                             </p>
                         </div>
                     </div>
