reservation part add

--- a/src/reservation/reservation.html
+++ b/src/reservation/reservation.html
@@ -8,6 +8,14 @@
     <title>Document</title>
   </head>
   <body dir="ltr">
+    <div class="bg-terms">
+      <div class="text-center py-16 space-y-2">
+        <p class="text-5xl text-white font-openSans tracking-wider font-bold">
+          Reservation
+        </p>
+        <p class="text-3xl text-white capitalize">Book your table now !</p>
+      </div>
+    </div>
     <div
       class="container mx-auto lg:grid grid-cols-3 gap-6 px-4 sm:px-10 py-10 bg-gray-50 w-full"
     >
