--- a/src/reservation/reservationTrack.html
+++ b/src/reservation/reservationTrack.html
@@ -8,7 +8,7 @@
     <title>Document</title>
   </head>
   <body dir="ltr" class="bg-gray-50">
-    <div class="container mx-auto px-4 md:px-10 lg:px-56 py-10">
+    <div class="container mx-auto px-4 md:px-10 lg:px-56 py-16">
       <div class="bg-white shadow-2xl rounded-sm">
         <div class="text-center py-5 bg-color6 text-white font-medium">
           <p class="text-3xl font-bold capitalize">
@@ -24,7 +24,7 @@
               alt=""
               class="w-56 h-auto object-fill"
             />
-            <div class="my-auto space-y-1.5">
+            <div class="py-4 space-y-2">
               <p class="text-xl font-openSans font-bold text-color3">
                 Hi ! UserName
               </p>
