--- a/src/billing/BillingPart2.html
+++ b/src/billing/BillingPart2.html
@@ -206,40 +206,40 @@
           class="grid lg:grid-cols-4 md:grid-cols-4 grid-cols-2 gap-1 mt-10 pt-1 border-t-2 border-black"
         >
           <div>
-            <p class="font-bold text-2xl">Postal address</p>
-            <div class="leading-4 self-center py-3 text-lg space-y-2">
+            <p class="font-bold">Postal address</p>
+            <div class="leading-4 self-center py-3 space-y-1.5">
               <p>Indeat</p>
               <p>Rokeya soroni</p>
               <p>Mirpur-10</p>
             </div>
           </div>
           <div>
-            <p class="font-bold text-2xl">Contact information</p>
-            <div class="leading-4 self-center py-3 text-lg space-y-2">
+            <p class="font-bold">Contact information</p>
+            <div class="leading-4 self-center py-3 space-y-1">
               <p>Phone : +099999999</p>
               <p>Email : indeat@gamil.com</p>
             </div>
           </div>
           <div>
             <div>
-              <p class="font-bold text-2xl">Bankgiro</p>
-              <p class="text-lg">5462-0000</p>
+              <p class="font-bold">Bankgiro</p>
+              <p>5462-0000</p>
             </div>
             <div class="py-2">
-              <p class="font-bold text-2xl">Org. Nr.</p>
-              <p class="text-lg">559007-5643</p>
+              <p class="font-bold">Org. Nr.</p>
+              <p>559007-5643</p>
             </div>
             <div>
-              <p class="font-bold text-2xl">VAT number</p>
-              <p class="text-lg">SE559007564301</p>
+              <p class="font-bold">VAT number</p>
+              <p>SE559007564301</p>
             </div>
           </div>
           <div>
-            <p class="font-bold text-2xl">Pay</p>
-            <div class="leading-4 self-center py-3">
-              <p class="text-lg">Indeat</p>
-              <p class="text-lg">Board seat: Stockholm</p>
-              <p class="text-lg">Approved for F tax</p>
+            <p class="font-bold">Pay</p>
+            <div class="leading-4 self-center py-3 space-y-1.5">
+              <p>Indeat</p>
+              <p>Board seat: Stockholm</p>
+              <p>Approved for F tax</p>
             </div>
           </div>
         </div>
